# indo-openchatbot

./: .gitignore  1.csv  Untitled.html  Untitled.ipynb  pyproject.toml  readme.md  requirements.txt  scraper_subscene.py  subtitle.py
.ipynb_checkpoints/: Untitled-checkpoint.html  Untitled-checkpoint.ipynb  Untitled-checkpoint.py  eval-checkpoint.py  train-checkpoint.py
data/: 1.csv  2.csv  3.csv  dialog_to_csv.py  preprocess.py
runs/May16_18-53-38_b301d240c416/: events.out.tfevents.1589655218.b301d240c416.2877.0
