[tool.poetry]
name = "indo-openchatbot"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
lxml = "^4.5.0"
bs4 = "^0.0.1"
pandas = "^1.0.3"
gensim = "^3.8.3"
tqdm = "^4.46.0"
selenium = "^3.141.0"
joblib = "^0.15.1"
ipython = "^7.14.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
